--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 .hero{
 	height: 100vh;
 	width: 100%;
-	background-color:#000000;
+	background:url('../img/bg.jpg');
 	background-size: cover;
 	background-position: center;
 }
@@ -20,21 +20,26 @@ nav{
 	padding-right: 8%;
 }
 .logo{
-	color: white;
+	color: #ff0051;
 	font-size: 35px;
 	letter-spacing: 1px;
 	cursor: pointer;
 }
 span{
-	color: #f9004d;
+	color: white;
+}
+.name{
+	color: #ff0051;
 }
 nav ul li{
 	list-style-type: none;
 	display: inline-block;
 	padding: 10px  25px;
+	border-radius: 60px;
+	background-color: #000000;
 }
 nav ul li a{
-	color: white;
+	color: rgb(255, 255, 255);
 	text-decoration: none;
 	font-weight: bold;
 	text-transform: capitalize;
